@@ -51,4 +51,13 @@ stored in the database rather than a dictionary.
 * For HW 11 I tried implementing a commenting system (Project 8) for the images but I was
 running into some problems with the database not creating the table.
 
+2014-04-24 Omar Ali
+* For HW 13 I implemented multithreading (Project 17) by spawning a thread for the
+server.py. The way I know this is working is because I print out a message
+that says "Thread is alive what more proof do you need???????". This message
+is printed every time the thread is run so you should see it in the prints in
+the terminal.
+
+
+
 
